Comments and book updated for Autoconf archives
The previous branch that had corrected `bootstrap.conf', also had a nice
solution to not use SED for finding the Autoconf archives directory. So the
part of the book that said DEVDIR must not contain `gnulib' within it was
also updated.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -99,13 +99,11 @@ bootstrap_post_import_hook()
 {
 
   # Get the necesssary Autoconf-archive macros. It is assumed that
-  # autoconf-archives is in the same directory as gnulib, so we just
-  # replace `gnulib' in GNULIB_SRCDIR with `autoconf-archive' to get
-  # to it. Then we simply copy the desired m4 macros if an
-  # Autoconf-archive exists or download it otherwise.
-  autoconfardir="$GNULIB_SRCDIR/../autoconf-archive/"
-  if [ -f "$autoconfardir/m4/ax_pthread.m4" ]; then
-    cp "$autoconfardir/m4/ax_pthread.m4 $m4_base/"
+  # autoconf-archives is cloned the same directory as gnulib. Therefore we
+  # simply copy the desired m4 macros if an Autoconf-archive exists or
+  # download it otherwise.
+  if [ -f "$GNULIB_SRCDIR/../autoconf-archive/m4/ax_pthread.m4" ]; then
+    cp "$GNULIB_SRCDIR/../autoconf-archive/m4/ax_pthread.m4 $m4_base/"
   else
     # Choose the program to use to download files from the web.  `curl' is
     # present in most GNU/Linux systems and OS X as well, `wget' is usually
