Incorrect double-quotations in bootstrap.conf removed
In the commit which introduced the curl program when wget is not available
(commit hash 5610289), the directory for the Autoconf archives was also set
using ../ instead of a SED operator. However, the full arguments to `cp'
were also placed within quotation signs, so `cp' would complain about no
destination file and abort. The quotation marks were removed here.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -102,8 +102,8 @@ bootstrap_post_import_hook()
   # autoconf-archives is cloned the same directory as gnulib. Therefore we
   # simply copy the desired m4 macros if an Autoconf-archive exists or
   # download it otherwise.
-  if [ -f "$GNULIB_SRCDIR/../autoconf-archive/m4/ax_pthread.m4" ]; then
-    cp "$GNULIB_SRCDIR/../autoconf-archive/m4/ax_pthread.m4 $m4_base/"
+  if [ -f $GNULIB_SRCDIR/../autoconf-archive/m4/ax_pthread.m4 ]; then
+    cp $GNULIB_SRCDIR/../autoconf-archive/m4/ax_pthread.m4 $m4_base/
   else
     # Choose the program to use to download files from the web.  `curl' is
     # present in most GNU/Linux systems and OS X as well, `wget' is usually
