Make authors.texi a double-colon rule
authors.texi rule has no prerequisites, so once the file is created (and
it’s created empty when running make in top directory) the rule is never
run again afterwards, because the target appears always updated.  The
double-colon rule is always executed when there are no prerequisites.
Note that because of this, also every rules depending on authors.texi
will always be executed, but this is a necessary side effect since
authors.texi should be updated after any change to git history (and
cannot depend on "../.git" because this isn’t available in non-git
snapshots).  However, better always than never.

In addition, don’t count merge commits.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -42,7 +42,7 @@ EXTRA_DIST = findversions.sh README
 
 
 ## Generate a list of Gnuastro authors from repo history:
-authors.texi:
+authors.texi::
         # Only update this file if a .git directory is present in the
         # parent directory. Otherwise, this is being run from a
         # tar-ball and asuthors.texi cannot be updated.
@@ -53,7 +53,7 @@ authors.texi:
         # will be created (which will allow us to generate the
         # documentation).
 	if [ -d ../.git ]; then                                          \
-	  git shortlog --numbered --summary --email                      \
+	  git shortlog --numbered --summary --email --no-merges          \
 	    | sed -e 's/</ /' -e 's/>/ /' -e 's/@/@@/' -e "s/è/@\`e/"    \
             | awk '{printf "%s %s (%s, %s)@*\n", $$2, $$3, $$4, $$1}'    \
             > $@;                                                        \
