Citation added for default cosmological parameters
The reference for the cosmological parameters used in CosmicCalculator was
not specified in the configuration file. So in a few commented lines they
were added to guide the interested users.

This fixes bug #47872.

--- a/src/cosmiccal/astcosmiccal.conf
+++ b/src/cosmiccal/astcosmiccal.conf
@@ -17,6 +17,20 @@
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
+
+# Citation
+# ========
+#
+# The current default cosmological values in CosmicCalculator are taken
+# from the Planck 2013 results (paper XVI, link below, Table 2,
+# Plank+lensing). These are the most recent accepted (by journal editors)
+# Plank results until this release of Gnuastro.
+#
+# http://adsabs.harvard.edu/abs/2014A%26A...571A..16P
+#
+# IMPORTANT NOTES: If you change these system-wide default values, please
+# change this comment and cite the source.
+
 # Input:
  redshift            1
  H0              68.14
