--- a/configure.ac
+++ b/configure.ac
@@ -27,8 +27,11 @@
 
 # Definitions:
 AC_PREREQ([2.69])
-AC_INIT([GNU Astronomy Utilities], [0.1], [bug-gnuastro@gnu.org],
-        [gnuastro], [http://www.gnu.org/software/gnuastro/])
+AC_INIT([GNU Astronomy Utilities],
+         m4_esyscmd([bootstrapped/build-aux/git-version-gen    \
+                                  .tarball-version --prefix]),
+        [bug-gnuastro@gnu.org], [gnuastro],
+        [http://www.gnu.org/software/gnuastro/])
 AC_CONFIG_AUX_DIR([bootstrapped/build-aux])
 AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects gnu])
 AC_CONFIG_SRCDIR([lib/fitsarrayvv.c])
