--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -43,30 +43,15 @@ EXTRA_DIST = findversions.sh README
 
 ## Generate a list of Gnuastro authors from repo history:
 authors.texi:
-        # Only update this file if a .git directory is present in the
-        # parent directory. Otherwise, this is being run from a
-        # tar-ball and asuthors.texi cannot be updated.
-        #
-        # In case there is no git repository, then just touch
-        # authors.texi. If one already exists, only its date will be
-        # unchanged. However, if it doesn't already exist a blank file
-        # will be created (which will allow us to generate the
-        # documentation).
-	if [ -d ../.git ]; then                                          \
-	  git shortlog --numbered --summary --email                      \
-	    | sed -e 's/</ /' -e 's/>/ /' -e 's/@/@@/' -e "s/è/@'e/"     \
-            | awk '{printf "%s %s (%s, %s)@*\n", $$2, $$3, $$4, $$1}'    \
-            > $@;                                                        \
-        else touch $@;                                                   \
-	fi
+	./genauthors
 
 
 # Find the version of each utility:
-headers=${top_srcdir}/src/*/main.h
-utilityversions.texi: ${headers}
-	./findversions.sh ${headers}
+headers=$(top_srcdir)/src/*/main.h
+utilityversions.texi: $(headers)
+	./findversions.sh $(headers)
 
 
 ## Images:
-infognuastrodir=${infodir}/gnuastro-figures/
-dist_infognuastro_DATA = ${top_srcdir}/doc/gnuastro-figures/*
+infognuastrodir=$(infodir)/gnuastro-figures/
+dist_infognuastro_DATA = $(top_srcdir)/doc/gnuastro-figures/*
