doc/genauthors now works with different build directory
The doc/genauthors script could only be built when the source and build
directories where identical. So `make distcheck' would complain about not
finding the script. When the script was found, it couldn't find the
existing authors.texi file (because it was in the source directory). So now
it takes the source and build directories as input and uses them in its
laws.

Also a default result was added (to be rarely updated, since it is not a
common situation), so if the authors.texi could not be found, the authors
until a specific version could be used.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -38,18 +38,18 @@ gnuastro_TEXINFOS = fdl.texi authors.texi utilityversions.texi formath.texi
 
 ## Files not predefined by Automake, and not in dependencies that must
 ## be included in the final tar-ball distribution.
-EXTRA_DIST = findversions.sh README
+EXTRA_DIST = findversions.sh genauthors README
 
 
 ## Generate a list of Gnuastro authors from repo history:
 authors.texi::
-	./genauthors
+	$(top_srcdir)/doc/genauthors $(top_srcdir)/doc/ $(top_builddir)/doc/
 
 
 # Find the version of each utility:
 headers=$(top_srcdir)/src/*/main.h
 utilityversions.texi: $(headers)
-	./findversions.sh $(headers)
+	$(top_srcdir)/doc/findversions.sh $(headers)
 
 
 ## Images:
