A single AS_IF for the libjpeg tests in configure.ac
There were two AS_IF statements in configure.ac in the checks for libjpeg.
Each was testing the same variable, if it was `yes' or `no'! Using AS_IF's
`[RUN-IF-FALSE]' argument, the two calls to AS_IF were changed to a single
call.

--- a/configure.ac
+++ b/configure.ac
@@ -118,13 +118,13 @@ AC_MSG_RESULT([done])
 
 
 
-#Check necessary program(s):
+# Check libjpeg:
 anywarnings=no
 AC_CHECK_LIB([jpeg], [jpeg_stdio_dest],
              [has_libjpeg=yes], [has_libjpeg=no], [-lm])
-AS_IF([test "x$has_libjpeg" = "xno"], [anywarnings=yes])
 AS_IF([test "x$has_libjpeg" = "xyes"],
-      [AC_DEFINE([HAS_LIBJPEG], [], [Has libjpeg])])
+      [AC_DEFINE([HAS_LIBJPEG], [], [Has libjpeg])],
+      [anywarnings=yes])
 AM_CONDITIONAL([COND_HASLIBJPEG], [test "x$has_libjpeg" = "xyes"])
 
 AC_CHECK_PROG(has_ghostscript, gs, [yes], [no])
