GNU Autoconf archive version checker now used
The old check we had used for the version of Ghostscript would not work
when the version number was 9.05. Now we use the Autoconf archive macro
ax_compare_version.m4 to check for versions. This is a powerful version
checker that can also come in handy later if we need more such checks.

bootstrap.conf was also updated to copy/download this file.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -98,12 +98,18 @@ gnulib_name="libgnu"
 bootstrap_post_import_hook()
 {
 
+  # List of m4 files we need from the GNU Autoconf Archives (excluding the
+  # `ax_' prefix and `.m4' suffix):
+  neededm4s="pthread compare_version"
+
   # Get the necesssary Autoconf-archive macros. It is assumed that
   # autoconf-archives is cloned the same directory as gnulib. Therefore we
   # simply copy the desired m4 macros if an Autoconf-archive exists or
   # download it otherwise.
   if [ -f "$GNULIB_SRCDIR/../autoconf-archive/m4/ax_pthread.m4" ]; then
-    cp "$GNULIB_SRCDIR/../autoconf-archive/m4/ax_pthread.m4" $m4_base/
+    for m4name in $neededm4s; do
+      cp "$GNULIB_SRCDIR/../autoconf-archive/m4/ax_$m4name.m4" $m4_base/
+    done
   else
     # Choose the program to use to download files from the web.  `curl' is
     # present in most GNU/Linux systems and OS X as well, `wget' is usually
@@ -115,8 +121,10 @@ bootstrap_post_import_hook()
     else
       downloader="wget -O"
     fi
-    $downloader "$m4_base/ax_pthread.m4" \
-     "http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=blob_plain;f=m4/ax_pthread.m4" || die "Failed to download ax_pthread.m4!"
+    for m4name in $neededm4s; do
+      $downloader "$m4_base/ax_$m4name.m4" \
+        "http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=blob_plain;f=m4/ax_$m4name.m4" || die "Failed to download ax_$m4name.m4!"
+    done
   fi
 
 }
