--- a/configure.ac
+++ b/configure.ac
@@ -376,30 +376,30 @@ PACKAGE_FULL_NAME="AC_PACKAGE_NAME (AC_PACKAGE_TARNAME) AC_PACKAGE_VERSION"
 AS_ECHO([])
 AS_ECHO([===================================================================])
 AS_ECHO([===================================================================])
-AS_ECHO(["$PACKAGE_FULL_NAME, is configured."])
+AS_ECHO(["$PACKAGE_NAME (Gnuastro) $PACKAGE_VERSION"])
+AS_ECHO(["is successfully configured for this machine."])
 AS_ECHO([])
 AS_IF([test "x$anywarnings" = xyes],
       [
-        AS_ECHO([Warnings:])
+        AS_ECHO([Configuration warnings:])
         AS_IF([test "x$has_libjpeg" = "xno"],
               [AS_ECHO(["  - libjpeg, could not be linked with in your library search path."])
-               AS_ECHO(["      If JPEG outputs are desired from ConvertType, it will warn"])
-               AS_ECHO(["      you and abort with an error."])])
+               AS_ECHO(["    If JPEG outputs are desired from ConvertType, it will warn"])
+               AS_ECHO(["    you and abort with an error."])])
         AS_IF([test "x$has_ghostscript" = "xno"],
               [AS_ECHO(["  - GPL GhostScript version 9.10 or later, with the executable"])
-               AS_ECHO(["      name \`gs', was not found in your PATH environment variable."])
-               AS_ECHO(["      If PDF outputs are desired from ConvertType, it will stop"])
-               AS_ECHO(["      at the EPS output and cannot proceed to generate the PDF."])])
+               AS_ECHO(["    name \`gs', was not found in your PATH environment variable."])
+               AS_ECHO(["    If PDF outputs are desired from ConvertType, it will abort"])
+               AS_ECHO(["    with an EPS output which you can convert to PDF by other means."])])
         AS_ECHO(["  All checks related to the above warnings will be skipped."])
         AS_ECHO([])
         AS_ECHO([])
       ]
      )
-AS_ECHO(["Please run the following commands to build, test"])
-AS_ECHO(["and install AC_PACKAGE_TARNAME AC_PACKAGE_VERSION on your machine."])
+AS_ECHO(["To build Gnuastro, please run:"])
+AS_ECHO([])
 AS_ECHO(["    make"])
-AS_ECHO(["    make check"])
-AS_ECHO(["    make install"])
+AS_ECHO([])
 AS_ECHO([===================================================================])
 AS_ECHO([===================================================================])
 AS_ECHO([])
